# heario-app

./: .gitignore  SETUP.md
sidecar/: sidecar.spec  ws_server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx
